# PySESM-Final-Commit

./: .gitignore  .pylintrc  AUTHORS.md  LICENSE  README.md  Search_Space_Partition.ipynb  nn_model.pth  pyproject.toml  rebase-editor.ps1  rebase-todo-plan.txt  rebase-todo.txt  requirements.txt  setup.py  svr_model.pth
PySESM/: __init__.py
PySESM/base_functions/: Function.py  sequential_model.py  sub_block_partition.py
PySESM/models/: DictLayer.py  ISTA.py  ISTALayer.py  Wrapper.py
PySESM/test_functions/: MultivariateNormal.py  gaussian.ipynb
PySESM/utils/: Search_Space.py  linalg.py  loggers.py
Uniform-partition/: Testing_Uniform_partition.ipynb  Uniform_partition.ipynb  partition.ipynb
docs/: HowTo-Debug.txt  UsersManual.md
docs/ExperimentalResults/: AllData.csv  SummaryData.csv
examples/: KDTree_example.py  LossWrappers.py  adaptative_partition_example.py  adaptive_partition_example.py  bayes_optim.py  bsesm_example.py  four_block_example.py  kdtree_example.py  multi_block_example.py  n_dimensions_example.py  n_dimentions_example.py  non_diagonal_cov.ipynb  non_diagonal_cov.py  one_block_bsesm_example.py  one_block_example.py  one_block_example_kdtree.py  one_gaussian_example.py  optimization.ipynb  ssesm_example.py  test_redefine.py  video_demo.py  visualization.py  wandb_sweep_bsesm_example.py  wandb_sweep_example.py  wandb_sweep_one_block_example.py  wandb_sweep_ssesm_example.py
examples/OOM_example/: OOM_example.py  fun.py
examples/results/: Resultados.xlsx  resultados_1.csv  resultados_2.csv
experiments/: boxplot_de _prueba.py  experiment.py  fun.py  fun_test.py  main.py  prepare_all.py  test_all.py  train_all.py
experiments/AdaptiveExperiment/: fun_test.py  main.py
experiments/DoE/: analyze_results.py  eda.py  generate_ring_osc_dataset.py  generate_validation_dataset.py  main.py  ring_osc_experiment_results.csv
experiments/ICICT/: experiment.py  fun.py  main.py
experiments/KDTree_experiments/: LossWrappers.py
experiments/NN/: __init__.py  model.py  nn_model.pth  regression_nn_model.pth  test.py  train.py
experiments/PCE/: __init__.py  model.py
experiments/PF/: model.py
experiments/PartitionManagersExp/: experiment_results.csv  main.py  main_debug.py  run_ram_compare.ps1  run_ram_compare.sh
experiments/SESM/: model_setup.py
experiments/SVR/: __init__.py  model.py  svr_model.pth  test.py  train.py
experiments/plots/: all_metrics.joblib  all_metrics_function_styblinski_tang.joblib  all_metrics_function_zakharov.joblib  all_metrics_function_zhou.joblib  all_metrics_styblinski_tang_function.joblib  all_metrics_zakharov_function.joblib  all_metrics_zhou_function.joblib  all_metricsrosenbrock_rescaled_function.joblib  all_metricszakharov_function.joblib  all_metricszhou_function.joblib  all_times.joblib  all_times_function_styblinski_tang.joblib  all_times_function_zakharov.joblib  all_times_function_zhou.joblib  all_times_styblinski_tang_function.joblib  all_times_zakharov_function.joblib  all_times_zhou_function.joblib  all_timesrosenbrock_rescaled_function.joblib  all_timeszakharov_function.joblib  all_timeszhou_function.joblib  metrics_function_styblinski_tang.joblib  metrics_function_zakharov.joblib  metrics_function_zhou.joblib  n_sampleszhou_function.joblib  plots.py  report.md
multivariate-experiments/: multivariate-sesm-2d.ipynb  multivariate-sesm-3d.ipynb  multivariate-sesm.ipynb
notebooks/multivariate-experiments/: multivariate-experiments.ipynb  multivariate-sesm-2d.ipynb
notebooks/uniform-partition/: Test_redefine.ipynb  Uniform_partition_sweeps.ipynb  uniform_partition.py
pysesm/: __init__.py  base_types.py  setup.py
tests/: dict_example.py
unit_tests/: pytest_helper.py
(+496 files in other folders)
