[build-system]
requires = ["setuptools>=64.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pysesm"
version = "0.1.1"
description = "SESM (sparse encoded surrogate model) library"
requires-python = ">=3.12"
authors = [
    {name = "Cindy Calderón", email = "ccalderon@itcr.ac.cr"},
    {name = "Juan Pablo Soto", email = "jusoto@itcr.ac.cr"},
    {name = "Pablo Alvarado", email = "palvarado@itcr.ac.cr"},
    {name = "Joshua Gamboa", email = "joshgc.19@gmail.com"},
    {name = "Aldo Cambronero", email = "cambroneroaldo03@gmail.com"},
    {name = "Hender Valdivia", email = "hvaldivia@estudiantec.cr"},
    {name = "Aaron Salas", email = "asalas@estudiantec.cr"}
]
license = {text = "BSD-3-Clause"}
classifiers = [
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "numpy",
    "torch>=2.0.0",
    "scipy"
    ]

[project.optional-dependencies]
# Visualization group: Dependencies for plotting, video generation, and experiment logging
viz = [
    "matplotlib",
    "plotly",
    "pandas",
    "wandb",
    "imageio" # Required for examples/visualization.py
]

# Development environment: Includes visualization tools + testing framework
dev = [
    "pysesm[viz]", # Installs everything above automatically
    "pytest"
]

[tool.setuptools]
packages = ["pysesm"]  # Replace with your actual package names

[tool.pytest.ini_options]
testpaths = ["unit_tests"]